--- a/index.html
+++ b/index.html
@@ -151,14 +151,31 @@
   };
 
   function endQuiz() {
-    clearInterval(timerInterval);
-    const result = score >= 3 ? "PASS" : "FAIL";
-    document.getElementById("quiz-section").style.display = "none";
-    document.getElementById("result-section").style.display = "block";
-    document.getElementById("result-message").innerText = `Quiz Completed!\nYour score: ${score}/${questions.length}\nResult: ${result}`;
-    document.getElementById("restart-quiz").style.display = "inline-block";
-    document.getElementById("review-answers").style.display = "inline-block";
-  }
+  clearInterval(timerInterval);
+  const result = score >= 3 ? "PASS" : "FAIL";
+  document.getElementById("quiz-section").style.display = "none";
+  document.getElementById("result-section").style.display = "block";
+  document.getElementById("result-message").innerText =
+    `Quiz Completed!\nYour score: ${score}/${questions.length}\nResult: ${result}`;
+
+  document.getElementById("restart-quiz").style.display = "inline-block";
+  document.getElementById("review-answers").style.display = "inline-block";
+
+  // ✅ Send data to Google Sheet
+  const data = {
+    name: document.getElementById("username").value,
+    score: score,
+    time: timer
+  };
+
+  fetch("https://script.google.com/macros/s/AKfycbzrxdjGnX6Mb3hBSrIcQsUNu34iiRZCRMJUyH-aBc62f8k6enIPJ6vkmTJBbXsWddEx/exec", {
+    method: "POST",
+    mode: "no-cors", // Required for Google Apps Script
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(data)
+  });
+}
+
 
   document.getElementById("restart-quiz").onclick = () => {
     location.reload();
